- Quick-and-dirty @{$char->{inventory}} > 0 fix for useSelf_item
  dcOnEmpty. (Will fail if your bot doesn't carry anything at all.)
- Same quick-and-dirty fix for "Auto-storaging due to insufficient ___".
- Don't try to statsAddAuto before the stat point info has been received.
- Equipped arrows will now show how many of them are left.

New features:
- Console::Unix interface no longer has "Press ENTER to continue"
  prompt, since UNIX terminals generally don't close when openkore exits.

Internal:
- Obsolete getActorHash() function removed (use Actor::get() instead).
- The format of $npcs_lut has changed, IDs are completely abandoned.

==================
### 1.6.2
==================

*** INCOMPATIBLE CHANGES ***:
- Items named e.g. "Unknown 1234" are now called "Unknown #1234" so that
  you can use their name in items_control.txt.
- The syntax for chat room commands has been changed. See below.
- The "whenStatusInactive" names for ASPD potions have been changed to
  "Concentration Potion", "Awakening Potion" and "Berserk Potion".
- dcOnDisconnect must be set to 2 if you want to disconnect when
  you get "Out of sync with server" error.

Bug fixes:
- Fix deal bug: showing twice as many items added.
- Make "Compiles portals now?" prompt case-insensitive.
- Prevent the character select screen from appearing randomly due to
  lag or unparsed packets.
- Storage log not created when relogAfterStorage is active.
- Bot should no longer fail to pick up items dropped by monsters that
  died a distance away.
- Tk map viewer has been fixed.
- Make itemsTakeAuto_party count dmgFromYou too. (Hack to allow
  looting monsters that you killed without ever using attack ai_seq.)
- inInventory was not working at all since its last update.
- Bot should no longer wait 3 seconds needlessly when starting an NPC
  conversation. http://openkore.sourceforge.net/forum/viewtopic.php?t=4743
- Don't say "Done talking with <NPC>." until after "<NPC> : Done talking".